Fix: On IE11, when displaying details panel, details info are not displayed and post-it layout doesn't adjust

--- a/grails-app/assets/stylesheets/app/mixin.less
+++ b/grails-app/assets/stylesheets/app/mixin.less
@@ -23,7 +23,7 @@
 }
 
 .make-flex-panel() {
-  flex: 1 1 0;
+  flex: 1 1 0px;
   -webkit-flex: 1 1 0;
 
   display: flex;
